hpc/slurm_q_seq2_top10_778501.out
  File "agent_training.py", line 32
    ap.add_argument("-ng", "--n_games", default=10_000,
                                                     ^
SyntaxError: invalid syntax
